<resources>
    <string name="app_name">Time Is Money</string>
    <string name="time_is_money">Time Is Money</string>
    <string name="manual_input">Manual Input</string>
    <string name="recorded_input">Recorded Input</string>
    <string name="submit">Submit</string>
    <string name="a_spinner_allowing_the_user_to_choose_between_the_different_types_of_salary_they_have_stored_in_the_settings">A spinner allowing the user to choose between the different types of salary they have stored in the settings.</string>
    <string name="enter_number_of_minutes">Enter number of minutes…</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="set_new_annual_salary">Set new annual salary</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="modify_wage">Modify wage</string>
    <string name="input_number_of_hours_worked_per_week">Input number of hours worked per week…</string>
    <string name="input_annual_salary">Input annual salary…</string>
    <string name="alternatively_input_annual_salary_and_hours_worked_per_week">Alternatively, input annual salary and hours worked per week:</string>
    <string name="input_hourly_wage">Input hourly wage…</string>
    <string name="set_new_hourly_wage">Set new hourly wage:</string>
    <string name="input_name_of_hourly_annual_wage">Input name of hourly/annual wage…</string>
    <string name="calculate">Calculate</string>
    <string name="recorded_log_title">Recorded Log</string>
    <string name="btn_record">Record</string>
    <string name="btn_stop">Stop</string>
    <string name="main_log_menu_title">Log a record</string>
    <string name="log_record">Log Record</string>
    <string name="statistics">Statistics</string>
</resources>